--- a/src/app/translation/translations/hi.json
+++ b/src/app/translation/translations/hi.json
@@ -588,6 +588,7 @@
       "header": {
         "name": "नाम",
         "active": "सक्रिय",
+        "id": "संबद्ध आईडी",
         "created": "बनाया था",
         "updated": "अपडेट किया गया"
       }
@@ -669,7 +670,10 @@
         "name": "नाम",
         "email": "ईमेल",
         "active": "सक्रिय",
-        "terms": "नियम और शर्तें"
+        "terms": "नियम और शर्तें",
+        "id": "संबद्ध आईडी",
+        "created": "बनाया था",
+        "updated": "अपडेट किया गया"
       }
     },
     "tab": {
@@ -708,7 +712,15 @@
         "firstname": "पहला नाम",
         "lastname": "सरनेम",
         "state": "राज्य",
-        "city": "शहर"
+        "city": "शहर",
+        "id": "संबद्ध आईडी",
+        "created": "बनाया था",
+        "updated": "अपडेट किया गया",
+        "phone": "फ़ोन",
+        "email": "ईमेल",
+        "line1": "पता",
+        "zip": "ज़िप कोड",
+        "country": "देश"
       }
     },
     "tab": {
@@ -808,7 +820,12 @@
       "expiration": "Expiration",
       "country": "Country",
       "state": "State",
-      "city": "City"
+      "city": "City",
+      "id": "संबद्ध आईडी",
+      "created": "बनाया था",
+      "updated": "अपडेट किया गया",
+      "line1": "पता",
+      "zip": "ज़िप कोड"
     },
     "tab": {
       "general": "GENERAL DETAILS",
@@ -831,7 +848,13 @@
         "start": "अवधि प्रारंभ",
         "end": "अवधि समाप्ति",
         "overdue": "अतिदेय",
-        "balance": "संतुलन"
+        "balance": "संतुलन",
+        "id": "संबद्ध आईडी",
+        "account": "खाता",
+        "created": "बनाया था",
+        "updated": "अपडेट किया गया",
+        "available": "Available",
+        "paid": "Paid"
       }
     },
     "tab": {
@@ -877,7 +900,12 @@
         "name": "उत्पाद का नाम",
         "sku": "SKU",
         "ship": "अपवाहन",
-        "delay": "शिपिंग देरी"
+        "delay": "शिपिंग देरी",
+        "id": "संबद्ध आईडी",
+        "price": "मूल्य",
+        "provider": "पूर्ति प्रदाता",
+        "created": "पर बनाया गया",
+        "updated": "अपडेट किया गया"
       }
     },
     "tab": {
@@ -976,7 +1004,10 @@
       "header": {
         "name": "नाम",
         "merchantprovidergroup": "भार संतुलन",
-        "numofcycles": "चक्र की संख्या"
+        "numofcycles": "चक्र की संख्या",
+        "id": "संबद्ध आईडी",
+        "created": "पर बनाया गया",
+        "updated": "अपडेट किया गया"
       }
     },
     "tab": {
@@ -1122,7 +1153,10 @@
         "name": "नाम",
         "subject": "विषय",
         "type": "प्रकार",
-        "smtpprovider": "SMTP प्रदाता"
+        "smtpprovider": "SMTP प्रदाता",
+        "id": "संबद्ध आईडी",
+        "created": "पर बनाया गया",
+        "updated": "अपडेट किया गया"
       }
     },
     "tab": {
@@ -1162,7 +1196,8 @@
         "name": "नाम",
         "affiliateid": "संबद्ध आईडी",
         "created": "पर बनाया गया",
-        "updated": "अपडेट किया गया"
+        "updated": "अपडेट किया गया",
+        "id": "संबद्ध आईडी"
       }
     },
     "tab": {
@@ -1219,7 +1254,10 @@
         "name": "नाम",
         "type": "प्रकार",
         "event": "घटना",
-        "data": "ट्रैकिंग डेटा"
+        "data": "ट्रैकिंग डेटा",
+        "id": "संबद्ध आईडी",
+        "created": "पर बनाया गया",
+        "updated": "अपडेट किया गया"
       }
     },
     "tab": {
@@ -1276,7 +1314,11 @@
         "campaign": "अभियान का नाम",
         "customer": "ग्राहक का नाम",
         "schedulesnum": "उत्पाद शेड्यूल की संख्या",
-        "rebillsnum": "रिबल्स की संख्या"
+        "rebillsnum": "रिबल्स की संख्या",
+        "id": "संबद्ध आईडी",
+        "alias": "उपनाम",
+        "created": "बनाया था",
+        "updated": "अपडेट किया गया"
       }
     },
     "tab": {
@@ -1318,7 +1360,10 @@
         "alias": "उपनाम",
         "amount": "रकम",
         "created": "पर बनाया गया",
-        "response": "प्रोसेसर रिस्पांस"
+        "response": "प्रोसेसर रिस्पांस",
+        "id": "संबद्ध आईडी",
+        "updated": "अपडेट किया गया",
+        "processor": "व्यापारी प्रदाता"
       }
     },
     "tab": {
@@ -1364,7 +1409,10 @@
         "id": "आईडी",
         "bill": "विधेयक पर",
         "created": "पर बनाया गया",
-        "amount": "रकम"
+        "amount": "रकम",
+        "updated": "अपडेट किया गया",
+        "customer": "ग्राहक",
+        "state": "State"
       }
     },
     "tab": {
@@ -1414,7 +1462,10 @@
         "status": "स्थिति",
         "number": "ट्रैकिंग आईडी",
         "created": "पर बनाया गया",
-        "updated": "अद्यतन किया गया"
+        "updated": "अद्यतन किया गया",
+        "id": "आईडी",
+        "carrier": "ट्रैकिंग कैरियर",
+        "provider": "पूर्ति प्रदाता"
       }
     },
     "tab": {
@@ -1445,8 +1496,9 @@
       "header": {
         "name": "नाम",
         "provider": "प्रदाता",
-        "username": "उपयोगकर्ता नाम",
-        "password": "पारण शब्द"
+        "id": "संबद्ध आईडी",
+        "created": "पर बनाया गया",
+        "updated": "अपडेट किया गया"
       }
     },
     "tab": {
@@ -1486,7 +1538,11 @@
         "fromname": "नाम से",
         "fromemail": "ई - मेल से",
         "hostname": "होस्ट का नाम",
-        "username": "उपयोगकर्ता नाम"
+        "username": "उपयोगकर्ता नाम",
+        "id": "संबद्ध आईडी",
+        "port": "बंदरगाह",
+        "created": "पर बनाया गया",
+        "updated": "अपडेट किया गया"
       }
     },
     "tab": {
@@ -1532,7 +1588,10 @@
       "title": "लोड बैलेंसर्स",
       "header": {
         "name": "नाम",
-        "merchantnum": "व्यापारी प्रदाता की संख्या"
+        "merchantnum": "व्यापारी प्रदाता की संख्या",
+        "id": "संबद्ध आईडी",
+        "created": "पर बनाया गया",
+        "updated": "अपडेट किया गया"
       }
     },
     "tab": {
@@ -1567,7 +1626,11 @@
       "header": {
         "name": "नाम",
         "processor": "प्रोसेसर का नाम",
-        "type": "प्रोसेसर प्रकार"
+        "type": "प्रोसेसर प्रकार",
+        "id": "संबद्ध आईडी",
+        "enabled": "सक्रिय",
+        "created": "पर बनाया गया",
+        "updated": "अपडेट किया गया"
       }
     },
     "tab": {
