--- a/src/app/translation/translations/hy.json
+++ b/src/app/translation/translations/hy.json
@@ -588,9 +588,10 @@
 			"header": {
 				"name": "Անուն",
 				"active": "Ակտիվ",
-				"created": "Ստեղծված",
-				"updated": "Թարմացված"
-			}
+        "id": "ID",
+        "created": "Ստեղծված",
+        "updated": "Թարմացված"
+      }
 		},
 		"tab": {
 			"general": "ԸՆԴՀԱՆՈՒՐ ՄԱՆՐԱՄԱՍՆԵՐ",
@@ -669,7 +670,10 @@
 				"name": "Անուն",
 				"email": "Էլ. փոստ",
 				"active": "Ակտիվ",
-				"terms": "Կանոններ և պայմաններ"
+				"terms": "Կանոններ և պայմաններ",
+        "id": "ID",
+        "created": "Ստեղծված",
+        "updated": "Թարմացված"
 			}
 		},
 		"tab": {
@@ -708,7 +712,15 @@
 				"firstname": "Անուն",
 				"lastname": "Ազգանուն",
 				"state": "Նահանգ",
-				"city": "Քաղաք"
+				"city": "Քաղաք",
+        "id": "ID",
+        "created": "Ստեղծված",
+        "updated": "Թարմացված",
+        "phone": "Հեռախոս",
+        "email": "Էլ. փոստ",
+        "line1": "Հասցե",
+        "zip": "ZIP կոդ",
+        "country": "Երկիր"
 			}
 		},
 		"tab": {
@@ -808,7 +820,12 @@
       "expiration": "Expiration",
       "country": "Country",
       "state": "State",
-      "city": "City"
+      "city": "City",
+      "id": "ID",
+      "created": "Ստեղծված",
+      "updated": "Թարմացված",
+      "line1": "Հասցե",
+      "zip": "ZIP կոդ"
     },
     "tab": {
       "general": "GENERAL DETAILS",
@@ -831,7 +848,13 @@
 				"start": "Ժամկետի սկիզբ",
 				"end": "Ժամկետի վերջ",
 				"overdue": "Ուշացած",
-				"balance": "Մնացորդ"
+				"balance": "Մնացորդ",
+        "id": "ID",
+        "account": "Հաշիվ",
+        "created": "Ստեղծված",
+        "updated": "Թարմացված",
+        "available": "Available",
+        "paid": "Paid"
 			}
 		},
 		"tab": {
@@ -877,7 +900,12 @@
 				"name": "Ապրանքի անունը",
 				"sku": "SKU",
 				"ship": "Առաքել",
-				"delay": "Առաքման ուշացում"
+				"delay": "Առաքման ուշացում",
+        "id": "ID",
+        "price": "Գին",
+        "provider": "Ծառայության մատակարար",
+        "created": "Թարմացվել է",
+        "updated": "Ստեղծվել է"
 			}
 		},
 		"tab": {
@@ -976,8 +1004,11 @@
 			"header": {
 				"name": "Անուն",
 				"merchantprovidergroup": "Բեռի հավասարակշռող",
-				"numofcycles": "Ցիկլերի քանակը"
-			}
+				"numofcycles": "Ցիկլերի քանակը",
+        "id": "ID",
+        "created": "Թարմացվել է",
+        "updated": "Ստեղծվել է"
+      }
 		},
 		"tab": {
 			"general": "ԸՆԴՀԱՆՈՒՐ ՄԱՆՐԱՄԱՍՆԵՐ",
@@ -1122,7 +1153,10 @@
 				"name": "Անուն",
 				"subject": "Վերնագիր",
 				"type": "Տեսակ",
-				"smtpprovider": "SMTP մատակարար"
+				"smtpprovider": "SMTP մատակարար",
+        "id": "ID",
+        "created": "Թարմացվել է",
+        "updated": "Ստեղծվել է"
 			}
 		},
 		"tab": {
@@ -1162,8 +1196,9 @@
 				"name": "Անուն",
 				"affiliateid": "Գործընկերոջ ID",
 				"created": "Ստեղծվել է",
-				"updated": "Թարմացվել է"
-			}
+				"updated": "Թարմացվել է",
+        "id": "ID"
+      }
 		},
 		"tab": {
 			"tracking": "ՀԵՏԱԳԾՈՒՄ",
@@ -1219,7 +1254,10 @@
 				"name": "Անուն",
 				"type": "Տեսակ",
 				"event": "Իրադարձություն",
-				"data": "Հետագծման տվյալ"
+				"data": "Հետագծման տվյալ",
+        "id": "ID",
+        "created": "Թարմացվել է",
+        "updated": "Ստեղծվել է"
 			}
 		},
 		"tab": {
@@ -1276,7 +1314,11 @@
 				"campaign": "Արշավի անունը",
 				"customer": "Հաճախորդի անունը",
 				"schedulesnum": "Ապրանքի հերթացուցակների քանակը",
-				"rebillsnum": "Հաշիվների քանակը"
+				"rebillsnum": "Հաշիվների քանակը",
+        "id": "ID",
+        "alias": "Գործարքի անունը",
+        "created": "Ստեղծված",
+        "updated": "Թարմացված"
 			}
 		},
 		"tab": {
@@ -1318,8 +1360,11 @@
 				"alias": "Գործարքի անունը",
 				"amount": "Գումար",
 				"created": "Ստեղծվել է",
-				"response": "Մշակիչի պատասխան"
-			}
+				"response": "Մշակիչի պատասխան",
+        "id": "ID",
+        "updated": "Թարմացված",
+        "processor": "Վաճառքի մատակարար"
+      }
 		},
 		"tab": {
 			"general": "ԸՆԴՀԱՆՈՒՐ ՄԱՆՐԱՄԱՍՆԵՐ",
@@ -1364,8 +1409,11 @@
 				"id": "ID",
 				"bill": "Հաշիվը ուղարկել",
 				"created": "Ստեղծվել է",
-				"amount": "Գումար"
-			}
+				"amount": "Գումար",
+        "updated": "Թարմացված",
+        "customer": "Հաճախորդ",
+        "state": "State"
+      }
 		},
 		"tab": {
 			"general": "ԸՆԴՀԱՆՈՒՐ ՄԱՆՐԱՄԱՍՆԵՐ",
@@ -1414,8 +1462,11 @@
 				"status": "Վիճակ",
 				"number": "Հետագծման համար",
 				"created": "Ստեղծվել է",
-				"updated": "Թարմացվել է"
-			}
+				"updated": "Թարմացվել է",
+        "id": "ID",
+        "carrier": "Tracking Carrier",
+        "provider": "Ծառայության մատակարար"
+      }
 		},
 		"tab": {
 			"general": "ԸՆԴՀԱՆՈՒՐ ՄԱՆՐԱՄԱՍՆԵՐ"
@@ -1445,8 +1496,9 @@
 			"header": {
 				"name": "Անուն",
 				"provider": "Մատակարար",
-				"username": "Օգտվողի անուն",
-				"password": "Գաղտնաբառ"
+        "id": "ID",
+        "created": "Թարմացվել է",
+        "updated": "Ստեղծվել է"
 			}
 		},
 		"tab": {
@@ -1486,7 +1538,11 @@
 				"fromname": "Անունից",
 				"fromemail": "Էլ. փոստից",
 				"hostname": "Հոսթի անուն",
-				"username": "Օգտվողի անուն"
+				"username": "Օգտվողի անուն",
+        "id": "ID",
+        "port": "Պորտ",
+        "created": "Թարմացվել է",
+        "updated": "Ստեղծվել է"
 			}
 		},
 		"tab": {
@@ -1532,7 +1588,10 @@
 			"title": "Բեռի հավասարակշռողներ",
 			"header": {
 				"name": "Անուն",
-				"merchantnum": "Ծառայության մատակարարների քանակը"
+				"merchantnum": "Ծառայության մատակարարների քանակը",
+        "id": "ID",
+        "created": "Թարմացվել է",
+        "updated": "Ստեղծվել է"
 			}
 		},
 		"tab": {
@@ -1567,7 +1626,11 @@
 			"header": {
 				"name": "Անուն",
 				"processor": "Մշակիչի անուն",
-				"type": "Մշակիչի տեսակ"
+				"type": "Մշակիչի տեսակ",
+        "id": "ID",
+        "enabled": "Միացված",
+        "created": "Թարմացվել է",
+        "updated": "Ստեղծվել է"
 			}
 		},
 		"tab": {
