--- a/src/app/translation/translations/hi.json
+++ b/src/app/translation/translations/hi.json
@@ -1012,6 +1012,7 @@
     },
     "tab": {
       "general": "सामान्य विवरण",
+      "cycle": "चक्र",
       "campaign": "अभियान"
     },
     "info": {
@@ -1033,6 +1034,7 @@
       "save": "सुरक्षित करें",
       "cancel": "रद्द करें",
       "name": "उत्पाद का नाम",
+      "image": "Image",
       "schedulename": "उत्पाद अनुसूची नाम",
       "price": "मूल्य",
       "pricetip": "समय की अवधि के लिए कीमत",
