--- a/src/app/translation/translations/hy.json
+++ b/src/app/translation/translations/hy.json
@@ -1012,6 +1012,7 @@
 		},
 		"tab": {
 			"general": "ԸՆԴՀԱՆՈՒՐ ՄԱՆՐԱՄԱՍՆԵՐ",
+      "cycle": "Ցիկլեր",
 			"campaign": "ԱՐՇԱՎՆԵՐ"
 		},
 		"info": {
@@ -1033,7 +1034,8 @@
 			"save": "ՊԱՀՊԱՆԵԼ",
 			"cancel": "ՉԵՂԱՐԿԵԼ",
 			"name": "Ապրանքի անուն",
-			"schedulename": "Ապրանքի հերթացուցակի անուն",
+      "image": "Image",
+      "schedulename": "Ապրանքի հերթացուցակի անուն",
 			"price": "Գին",
 			"pricetip": "Գինը որոշակի ժամանակահատվածում",
 			"start": "Մեկնարկ",
