Add shared email templates

--- a/src/app/translation/translations/de.json
+++ b/src/app/translation/translations/de.json
@@ -1163,7 +1163,9 @@
     },
     "tab": {
       "general": "ALLGEIMEINES",
-      "preview": "VORSCHAU"
+      "preview": "VORSCHAU",
+      "custom": "EMAIL TEMPLATES",
+      "shared": "MANAGED EMAIL TEMPLATES"
     },
     "info": {
       "createtitle": "Neue Mailvorlage",
