--- a/src/app/translation/translations/en.json
+++ b/src/app/translation/translations/en.json
@@ -1163,7 +1163,9 @@
     },
     "tab": {
       "general": "GENERAL DETAILS",
-      "preview": "PREVIEW"
+      "preview": "PREVIEW",
+      "custom": "EMAIL TEMPLATES",
+      "shared": "MANAGED EMAIL TEMPLATES"
     },
     "info": {
       "createtitle": "Create new Email Template",
