--- a/src/app/translation/translations/de.json
+++ b/src/app/translation/translations/de.json
@@ -1187,6 +1187,10 @@
       "type": "Variante",
       "search": "Suchen"
     },
+    "shared": {
+      "title": "Managed Email Templates",
+      "subtitle": "Copy body of managed email template"
+    },
     "preview": {
       "title": "Mailvorlage vorschauen",
       "subtitle": "Schauen Sie vor, wie die Mailvorlage aussehen wird."
